# allianceauth-mumble-temp

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: main.yml  publish.yml
.tx/: transifex.yml
mumbletemps/: __init__.py  admin.py  app_settings.py  apps.py  auth_hooks.py  models.py  tasks.py  tests.py  urls.py  views.py
mumbletemps/locale/: django.pot
mumbletemps/locale/cs/LC_MESSAGES/: django.po
mumbletemps/locale/en/LC_MESSAGES/: django.po
mumbletemps/locale/fr_FR/LC_MESSAGES/: django.po
mumbletemps/locale/ja/LC_MESSAGES/: django.po
mumbletemps/locale/nl/LC_MESSAGES/: django.po
mumbletemps/locale/ru/LC_MESSAGES/: django.po
mumbletemps/locale/sk/LC_MESSAGES/: django.po
mumbletemps/locale/uk/LC_MESSAGES/: django.po
mumbletemps/migrations/: 0001_initial.py  0002_tempuser.py  0003_auto_20200604_1020.py  0004_auto_20200605_0828.py  0005_tempuser_templink.py  0006_tempuser_character_id.py  0007_alter_templink_creator.py
mumbletemps/templates/mumbletemps/: base.html  create.html  index.html  link.html  login.html
mumbletemps/templatetags/: timetags.py
tests/: test_settingsAA3.py  test_settingsAA4.py  urls.py
