[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]

[project]
name = "allianceauth-mumbletemps"
description = "Mumble Temp Links plugin for Alliance Auth"
readme = "README.md"
keywords = [
    "allianceauth",
    "eveonline",
    "mumble",
]
license = { file = "LICENSE" }
authors = [
    { name = "Aaron Kable", email = "aaronkable@gmail.com" },
]
requires-python = ">=3.8"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dynamic = [
    "version",
]
dependencies = [
    "allianceauth<5,>=4.10",
]
urls.Changelog = "https://github.com/Solar-Helix-Independent-Transport/allianceauth-mumble-temp/blob/master/CHANGELOG.md"
urls.Documentation = "https://github.com/Solar-Helix-Independent-Transport/allianceauth-mumble-temp/blob/master/README.md"
urls.Homepage = "https://github.com/Solar-Helix-Independent-Transport/allianceauth-mumble-temp"
urls.Source = "https://github.com/Solar-Helix-Independent-Transport/allianceauth-mumble-temp.git"
urls.Tracker = "https://github.com/Solar-Helix-Independent-Transport/allianceauth-mumble-temp/issues"

[tool.hatch.build]
include = [
    "/mumbletemps",
]

[tool.hatch.version]
path = "mumbletemps/__init__.py"
